--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -614,8 +614,8 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.26379517479999998" green="0.39073671859999998" blue="0.46701309279999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
+                                            <outlet property="confirmImage" destination="tPy-7P-Dtz" id="Y8R-wx-7qq"/>
                                             <outlet property="serviceDate" destination="KSd-ZC-b3c" id="V9C-Iw-qFG"/>
-                                            <outlet property="serviceImage" destination="tPy-7P-Dtz" id="Y8R-wx-7qq"/>
                                             <outlet property="serviceName" destination="R4W-rq-a1H" id="0EI-Re-boW"/>
                                             <outlet property="servicePrice" destination="Vbk-iQ-5zO" id="dld-jL-upq"/>
                                             <outlet property="servicePriceView" destination="GQZ-o2-8TJ" id="MHx-fE-3QN"/>
@@ -1299,7 +1299,7 @@
             </objects>
             <point key="canvasLocation" x="801.44927536231887" y="1557.5892857142856"/>
         </scene>
-        <!--Service Requests-->
+        <!--Appointments-->
         <scene sceneID="AO7-d2-qmr">
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="iCD-Ej-2lx" customClass="OwnerUpcomingServicesCalendarViewController" customModule="Boatell_v3" customModuleProvider="target" sceneMemberID="viewController">
@@ -1323,7 +1323,7 @@
                                     <constraint firstAttribute="width" secondItem="iO3-AU-Yb8" secondAttribute="height" multiplier="207:1" id="IzV-vS-nRN"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upcoming Services" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrG-0b-gVc">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upcoming Appointments" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrG-0b-gVc">
                                 <rect key="frame" x="20" y="176" width="374" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1534,8 +1534,8 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.26379517479999998" green="0.39073671859999998" blue="0.46701309279999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
+                                            <outlet property="confirmImage" destination="Kmx-3k-imI" id="6fC-Aa-F7B"/>
                                             <outlet property="serviceDate" destination="1xU-pi-LDL" id="Tgi-Vx-m4W"/>
-                                            <outlet property="serviceImage" destination="Kmx-3k-imI" id="6fC-Aa-F7B"/>
                                             <outlet property="serviceName" destination="NhQ-Y4-t4h" id="mc1-Vx-Uld"/>
                                             <outlet property="servicePrice" destination="tQe-qZ-Q8U" id="aHl-Oh-gNJ"/>
                                             <outlet property="servicePriceView" destination="agr-1h-sqP" id="tZX-bD-4Vr"/>
@@ -1569,7 +1569,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oUX-7m-qLW"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Service Requests" selectedImage="calendar" catalog="system" id="2Mp-To-Dxm"/>
+                    <tabBarItem key="tabBarItem" title="Appointments" image="calendar" catalog="system" selectedImage="calendar" id="2Mp-To-Dxm"/>
                     <navigationItem key="navigationItem" id="huU-IY-9b1"/>
                     <connections>
                         <outlet property="calendarView" destination="jNL-pa-U0G" id="113-Gi-mJ7"/>
@@ -1616,7 +1616,7 @@
                                     <constraint firstAttribute="width" secondItem="151-PR-caB" secondAttribute="height" multiplier="139:36" id="T8F-L0-i3K"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                <state key="normal" title="AppointmentHistory">
+                                <state key="normal" title="Appointment History">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -1700,8 +1700,8 @@
                         <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="DAZ-jp-uBm" kind="relationship" relationship="viewControllers" id="D08-dF-ZU7"/>
                         <segue destination="iCD-Ej-2lx" kind="relationship" relationship="viewControllers" id="eAA-QI-tog"/>
+                        <segue destination="DAZ-jp-uBm" kind="relationship" relationship="viewControllers" id="D08-dF-ZU7"/>
                         <segue destination="Pcr-HF-O96" kind="relationship" relationship="viewControllers" id="YXS-GQ-pVF"/>
                     </connections>
                 </tabBarController>
@@ -1733,8 +1733,8 @@
                                     <constraint firstAttribute="width" secondItem="p9a-be-P6r" secondAttribute="height" multiplier="414:1" id="DyA-E0-Gcg"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFo-5L-cZo">
-                                <rect key="frame" x="128" y="174" width="158" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Appointment History" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFo-5L-cZo">
+                                <rect key="frame" x="20" y="174" width="374" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
                                 <color key="textColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -1806,8 +1806,8 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.26379517479999998" green="0.39073671859999998" blue="0.46701309279999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
+                                            <outlet property="confirmImage" destination="pYE-SY-vz8" id="bb8-LT-3iZ"/>
                                             <outlet property="serviceDate" destination="Xzb-ST-Sx0" id="Sdb-gO-3pn"/>
-                                            <outlet property="serviceImage" destination="pYE-SY-vz8" id="bb8-LT-3iZ"/>
                                             <outlet property="serviceName" destination="mYc-fm-a65" id="LBL-sH-jWl"/>
                                             <outlet property="servicePrice" destination="Jjn-hu-gaW" id="ZL7-MU-xZh"/>
                                             <outlet property="servicePriceView" destination="XNU-b3-B9W" id="eeS-oi-HgA"/>
@@ -1845,8 +1845,8 @@
                             <constraint firstItem="Eib-Vh-cVm" firstAttribute="width" secondItem="Eib-Vh-cVm" secondAttribute="height" multiplier="207:73" id="ggw-Am-Xgp"/>
                             <constraint firstItem="Eib-Vh-cVm" firstAttribute="trailing" secondItem="1XX-Zz-B3q" secondAttribute="trailing" id="ii1-hJ-rXs"/>
                             <constraint firstItem="p9a-be-P6r" firstAttribute="top" secondItem="1XX-Zz-B3q" secondAttribute="top" constant="101" id="p5o-IV-wM8"/>
-                            <constraint firstItem="BFo-5L-cZo" firstAttribute="leading" secondItem="1XX-Zz-B3q" secondAttribute="leading" constant="128" id="pdT-69-Yq1"/>
-                            <constraint firstItem="1XX-Zz-B3q" firstAttribute="trailing" secondItem="BFo-5L-cZo" secondAttribute="trailing" constant="128" id="rQz-e5-G69"/>
+                            <constraint firstItem="BFo-5L-cZo" firstAttribute="leading" secondItem="1XX-Zz-B3q" secondAttribute="leading" constant="20" id="pdT-69-Yq1"/>
+                            <constraint firstItem="1XX-Zz-B3q" firstAttribute="trailing" secondItem="BFo-5L-cZo" secondAttribute="trailing" constant="20" id="rQz-e5-G69"/>
                             <constraint firstItem="Eib-Vh-cVm" firstAttribute="leading" secondItem="1XX-Zz-B3q" secondAttribute="leading" id="u6E-UH-0CW"/>
                             <constraint firstItem="TmY-1t-3bz" firstAttribute="leading" secondItem="1XX-Zz-B3q" secondAttribute="leading" id="usd-Ns-BUH"/>
                             <constraint firstItem="TmY-1t-3bz" firstAttribute="trailing" secondItem="1XX-Zz-B3q" secondAttribute="trailing" id="wwJ-4T-We7"/>
